--- a/cart.html
+++ b/cart.html
@@ -77,7 +77,7 @@
                             <th>Sản phẩm</th>
                             <th>Giá</th>
                             <th>Số Lượng</th>
-                            <th>Chọn</th>
+                            <th>Xoá</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -150,9 +150,11 @@
 
     <script src="assets/js/cart.js"></script>
     <script>
-        const login = document.getElementById("code");
-        const us = localStorage.getItem("username");
-        login.innerHTML = us;
+        const login = document.getElementById("code")
+        const us = localStorage.getItem("username")
+        if(us){
+        login.innerHTML = " " + us 
+        }
     </script>
 </body>
 
